--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "react-native-obfuscating-transformer",
+  "name": "@thelonelyastronaut/react-native-obfuscating-transformer",
   "version": "1.0.0",
   "description": "Obfuscating transformer for react-native",
   "main": "dist/index.js",
-  "repository": "https://github.com/ds300/react-native-obfuscating-transformer",
+  "repository": "https://github.com/TheLonelyAstronaut/react-native-obfuscating-transformer",
   "author": "David Sheldrick",
   "license": "MIT",
   "dependencies": {
-    "@types/app-root-path": "^1.2.4",
-    "@types/babel__core": "^7.1.14",
-    "@types/babel__generator": "^7.6.2",
-    "@types/node": "^14.14.37",
-    "@types/semver": "^7.3.4",
-    "app-root-path": "^2.0.1",
-    "@babel/generator": "^7.13.9",
-    "@babel/traverse": "^7.13.13",
-    "@babel/parser": "^7.13.13",
-    "javascript-obfuscator": "^2.11.0",
-    "jju": "^1.3.0",
-    "semver": "^5.4.1",
+    "@babel/generator": "^7.21.5",
+    "@babel/parser": "^7.21.5",
+    "@babel/traverse": "^7.21.5",
+    "@types/app-root-path": "^1.2.5",
+    "@types/node": "^16",
+    "@types/semver": "^7.5.0",
+    "app-root-path": "^3.1.0",
+    "javascript-obfuscator": "^4.0.2",
+    "jju": "^1.4.0",
+    "metro-bundler": "^0.22.1",
+    "semver": "^7.5.1",
     "source-map": "^0.6.1"
   },
   "peerDependencies": {
@@ -36,19 +35,18 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^22.0.1",
-    "babel-preset-react-native": "^4.0.1",
+    "@types/jest": "^29.5.0",
     "husky": "^0.13.3",
-    "jest": "^26.0.22",
+    "jest": "^29.5.0",
     "lint-staged": "^3.4.1",
-    "metro": "^0.65.2",
-    "metro-bundler": "^0.22.1",
+    "metro": "^0.76.4",
+    "metro-react-native-babel-preset": "0.73.5",
     "np": "^4.0.2",
-    "prettier": "^1.10.2",
-    "react-native": "^0.64.0",
-    "ts-jest": "^22.0.1",
-    "ts-node": "^4.1.0",
-    "typescript": "^4.0.7"
+    "prettier": "^2.4.1",
+    "react-native": "^0.71.0",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.0",
+    "typescript": "^4.8.4"
   },
   "jest": {
     "transform": {
